--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,8 @@
 	
 <div id = "mainDiv" role = "main">
 	<script> socket = io(); </script>
+	<img id = "Loading" src = "loading.gif" style = "display:block; margin:auto; margin-top:-48px; padding-top:50%;"></img>
+	
 	<video id="video" width = "400" height = "400"></video>
 	<input id = "hiddenInput" type = "hidden" name = "hiddenInput" autofocus size = 5/>
 	<canvas id = "MainCanvas" width = "180" height = "360"</canvas>
