--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,11 @@
 <script src = "/socket.io/socket.io.js"></script>
 	
 <div id = "mainDiv" role = "main">
+	<canvas id = "MainCanvas" width = "180" height = "360"></canvas>
 	<script> socket = io(); </script>
 	<img id = "Loading" src = "loading.gif"></img>
-	<video id="video" width = "1024" height = "1024"></video>
 	<input id = "hiddenInput" type = "hidden" name = "hiddenInput" autofocus size = 5/>
-	<canvas id = "MainCanvas" width = "180" height = "360"</canvas>
 	
+	<!--<iframe id = "Video" width="420" height="315"></iframe>-->
 </div>
 </body>
