--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 <div id = "mainDiv" role = "main">
 	<canvas id = "MainCanvas" width = "180" height = "360"></canvas>
 	<script> socket = io(); </script>
-	<img id = "Loading" src = "loading.gif"></img>
+	<img id = "Loading" src = "title.gif"></img>
 	<input id = "hiddenInput" type = "hidden" name = "hiddenInput" autofocus size = 5/>
 	
 	<!--<iframe id = "Video" width="420" height="315"></iframe>-->
