--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,8 @@
 	<link rel = "stylesheet" type = "text/css" href = "styles.css"/>
 	<script src ="https://code.jquery.com/jquery-2.2.2.min.js"></script>
 	<script src='https://code.responsivevoice.org/responsivevoice.js'></script>
-	<script src = "index.js"></script>
-	<script src = "functions.js"></script>
+	<script src = "bundle.js"></script>
+	
 </head>
 <body>
 <script src = "/socket.io/socket.io.js"></script>
