--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 	<canvas id = "MainCanvas" width = "180" height = "360"></canvas>
 	<script> try{socket = io();}catch(e){} </script>
 	<img id = "Loading" src = "title.gif"></img>
-	
+	<img id = "Explaining" style = "visibility: hidden;"></img>
 	<!--<iframe id = "Video" width="420" height="315"></iframe>-->
 </div>
 </body>
