new messages and some info

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 	<script> try{socket = io();}catch(e){} </script>
 	<img id = "Loading" src = "title.gif"></img>
 	<img id = "Explaining" style = "visibility: hidden;"></img>
-	<p id="result" style = "top:10px; left:10px; width: 100px; height: 100px"></p>
+	<p id="result" style = "top:10px; left:10px; width: 100px; height: 100px; position: absolute"></p>
 	<!--<iframe id = "Video" width="420" height="315"></iframe>-->
 </div>
 </body>
