--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 	<title>Learn English Fun Way</title>
 	<link rel = "stylesheet" type = "text/css" href = "styles.css"/>
 	<script src ="https://code.jquery.com/jquery-2.2.2.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 	<script src='https://code.responsivevoice.org/responsivevoice.js'></script>
 	<script src = "bundle.js"></script>
 	
